# core

./: .gitignore  Cargo.toml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  privatekey
.cargo/: config.toml
escrow/: Cargo.toml
escrow/src/: lib.rs
solidity/src/: Escrow.sol
src/: lib.rs  main.rs  test.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
