[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.3"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.1"
k256 = {version = "0.13.3", features = ["ecdsa"]}
getrandom = {version = "0.2.15", features= ["js"]}

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "escrow"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]