[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.3"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.1"
getrandom = {version = "0.2.15", default-features = false, features= ["js"]}
k256 = {version = "0.13.3", default-features = false, features = ["ecdsa", "alloc"]}

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "verifier"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]